--- a/ReactProjects/Iluztro-v2/Iluztro-v2/backend/package.json
+++ b/ReactProjects/Iluztro-v2/Iluztro-v2/backend/package.json
@@ -18,6 +18,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.2",
+    "node-fetch": "^3.3.2",
+    "url": "^0.11.3",
     "validator": "^13.11.0"
   }
 }
